--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@
                     <td>
                         <label>Computer Vision API</label> </td>
                     <td>
-                        <input name='key' value="6edc124424b84ad59f26b587187982e6" required>
+                        <input name='key' value="" required>
                     </td>
                 </tr>
                 <tr>
